win32/freetds/include/sybdb.h

typedef int RETCODE;
typedef void DBCURSOR;
typedef void DBSORTORDER;
typedef void DBLOGINFO;
typedef short SHORT;
typedef int (*INTFUNCPTR) (void *, ...);
typedef int BOOL;
typedef unsigned char DBBOOL;
typedef char DBCHAR;
typedef tds_sysdep_int16_type DBSMALLINT;
typedef tds_sysdep_int32_type DBINT;
typedef unsigned char DBBINARY;
typedef unsigned tds_sysdep_int16_type DBUSMALLINT;
typedef struct
{
	DBINT mnyhigh;
	unsigned tds_sysdep_int32_type mnylow;
} DBMONEY;
typedef struct
{
	DBINT mny4;
} DBMONEY4;
typedef struct
{
	DBINT dtdays;
	DBINT dttime;
} DBDATETIME;
typedef struct
{
	DBUSMALLINT days;
	DBUSMALLINT minutes;
} DBDATETIME4;
typedef struct tds_dblib_loginrec LOGINREC;
typedef unsigned char BYTE;
typedef struct dbtypeinfo
{
	DBINT precision;
	DBINT scale;
} DBTYPEINFO;
/* Used by dbcolinfo */
enum
{ MAXCOLNAMELEN = 512 }; /* duplicates TDS_SYSNAME_SIZE */
typedef enum { CI_REGULAR=1, CI_ALTERNATE=2, CI_CURSOR=3 } CI_TYPE;
typedef struct 
{ 
    DBINT SizeOfStruct; 
    DBCHAR  Name[MAXCOLNAMELEN+2]; 
    DBCHAR  ActualName[MAXCOLNAMELEN+2]; 
    DBCHAR  TableName[MAXCOLNAMELEN+2]; 
    SHORT Type; 
    DBINT UserType; 
    DBINT MaxLength; 
    BYTE  Precision; 
    BYTE  Scale; 
    BOOL  VarLength; 
    BYTE  Null; 
    BYTE  CaseSensitive; 
    BYTE  Updatable; 
    BOOL  Identity; 

} DBCOL;
typedef struct tds_dblib_dbprocess DBPROCESS;
void dbcursorclose(DBCURSOR * hc);
RETCODE dbcursorfetch(DBCURSOR * hc, DBINT fetchtype, DBINT rownum);
int dbdate4cmp(DBPROCESS * dbprocess, DBDATETIME4 * d1, DBDATETIME4 * d2);
int dbdatename(DBPROCESS * dbprocess, char *buf, int date, DBDATETIME * datetime);
int dbgetoff(DBPROCESS * dbprocess, DBUSMALLINT offtype, int startfrom);
RETCODE dbreglist(DBPROCESS * dbproc);
RETCODE dbregwatch(DBPROCESS * dbprocess, DBCHAR * procnm, DBSMALLINT namelen, DBUSMALLINT options);
RETCODE dbrpwset(LOGINREC * login, char *srvname, char *password, int pwlen);
int dbstrcmp(DBPROCESS * dbprocess, char *s1, int l1, char *s2, int l2, DBSORTORDER * sort);
RETCODE dbsetloginfo(LOGINREC * loginrec, DBLOGINFO * loginfo);
RETCODE bcp_moretext(DBPROCESS * dbproc, DBINT size, BYTE * text);
void build_xact_string(char *xact_name, char *service_name, DBINT commid, char *result);
RETCODE scan_xact(DBPROCESS * connect, DBINT commid);
DBINT stat_xact(DBPROCESS * connect, DBINT commid);
RETCODE dbaltbind(DBPROCESS * dbprocess, int computeid, int column, int vartype, DBINT varlen, BYTE * varaddr);
RETCODE dbaltbind_ps(DBPROCESS * dbprocess, int computeid, int column, int vartype, DBINT varlen, BYTE * varaddr,
		     DBTYPEINFO * typeinfo);
int dbaltop(DBPROCESS * dbproc, int computeid, int column);
int dbbufsize(DBPROCESS * dbprocess);
BYTE *dbbylist(DBPROCESS * dbproc, int computeid, int *size);
char *dbchange(DBPROCESS * dbprocess);
RETCODE dbclropt(DBPROCESS * dbproc, int option, const char param[]);
RETCODE dbtablecolinfo (DBPROCESS *dbproc, DBINT column, DBCOL *pdbcol );
RETCODE	dbcolinfo (DBPROCESS *dbproc, CI_TYPE type, DBINT column, DBINT computeid, DBCOL *pdbcol);
DBINT dbcollen(DBPROCESS * dbproc, int column);
DBINT dbcolutype(DBPROCESS * dbprocess, int column);
DBINT dbconvert_ps(DBPROCESS * dbprocess, int srctype, BYTE * src, DBINT srclen, int desttype, BYTE * dest, DBINT destlen,
		   DBTYPEINFO * typeinfo);
RETCODE dbdatecmp(DBPROCESS * dbproc, DBDATETIME * d1, DBDATETIME * d2);
RETCODE dbfcmd(DBPROCESS * dbproc, const char *fmt, ...);
DBINT dbfirstrow(DBPROCESS * dbproc);
char *dbgetcharset(DBPROCESS * dbprocess);
DBBOOL dbisavail(DBPROCESS * dbprocess);
DBINT dblastrow(DBPROCESS * dbproc);
int dbmnycmp(DBPROCESS * dbproc, DBMONEY * m1, DBMONEY * m2);
RETCODE dbmnymaxneg(DBPROCESS * dbproc, DBMONEY * dest);
RETCODE dbmny4copy(DBPROCESS * dbprocess, DBMONEY4 * m1, DBMONEY4 * m2);
RETCODE dbmorecmds(DBPROCESS * dbproc);
RETCODE dbmoretext(DBPROCESS * dbproc, DBINT size, const BYTE text[]);
RETCODE dbprrow(DBPROCESS * dbproc);
void dbrecftos(const char filename[]);
RETCODE dbresults_r(DBPROCESS * dbproc, int recursive);
RETCODE *dbsechandle(DBINT type, INTFUNCPTR handler);
char *dbservcharset(DBPROCESS * dbprocess);
RETCODE dbsetdefcharset(char *charset);
RETCODE dbspr1row(DBPROCESS * dbproc, char *buffer, DBINT buf_len);
RETCODE dbsprhead(DBPROCESS * dbproc, char *buffer, DBINT buf_len);
RETCODE dbsprline(DBPROCESS * dbproc, char *buffer, DBINT buf_len, DBCHAR line_char);
int dbstrbuild(DBPROCESS * dbproc, char *charbuf, int bufsize, char *text, char *formats, ...);
int dbstrlen(DBPROCESS * dbproc);
DBINT dbtextsize(DBPROCESS * dbprocess);
DBBINARY *dbtxtsnewval(DBPROCESS * dbprocess);
const char *dbversion(void);
/* LOGINREC manipulation */
RETCODE dbsetlname(LOGINREC * login, const char *value, int which);
RETCODE dbsetlbool(LOGINREC * login, int value, int which);
RETCODE bcp_columns(DBPROCESS * dbproc, int host_colcount);
int bcp_getbatchsize(DBPROCESS * dbproc); /* FreeTDS only */
RETCODE bcp_exec(DBPROCESS * dbproc, DBINT * rows_copied);
RETCODE bcp_options(DBPROCESS * dbproc, int option, BYTE * value, int valuelen);