sqlfront.pxd


    DBINT dbconvert_ps(DBPROCESS *, int, BYTE *, DBINT, int, BYTE *, DBINT, DBTYPEINFO *)
    RETCODE dbsprhead(DBPROCESS *, char *, DBINT)
    DBINT dbcolutype(DBPROCESS *, int)
    DBINT stat_xact(DBPROCESS *, DBINT)
    RETCODE dbaltbind(DBPROCESS *, int, int, int, DBINT, BYTE *)
    RETCODE dbreglist(DBPROCESS *)
    int bcp_getbatchsize(DBPROCESS *)
    float __builtin_tanhf(float)
    long double __builtin_tanhl(long double)
    int __builtin_popcount(int)
    int dbstrbuild(DBPROCESS *, char *, int, char *, char *)
    RETCODE scan_xact(DBPROCESS *, DBINT)
    RETCODE dbspr1row(DBPROCESS *, char *, DBINT)
    RETCODE bcp_options(DBPROCESS *, int, BYTE *, int)
    RETCODE dbmoretext(DBPROCESS *, DBINT, BYTE *)
    RETCODE dbcursorfetch(DBCURSOR *, DBINT, DBINT)
    char * dbgetcharset(DBPROCESS *)
#	complex double __builtin_csin(complex double)
    DBINT dbtextsize(DBPROCESS *)
    void build_xact_string(char *, char *, DBINT, char *)
    DBBINARY * dbtxtsnewval(DBPROCESS *)
    float __builtin_tanf(float)
    double __builtin_tanh(double)
    long double __builtin_tanl(long double)
#	complex float __builtin_clogf(complex float)
#	complex long double __builtin_clogl(complex long double)
    double __builtin_sqrt(double)
    bool __builtin_isunordered()
    float __builtin_nansf(char *)
    RETCODE bcp_exec(DBPROCESS *, DBINT *)
    RETCODE dbclropt(DBPROCESS *, int, char *)
    float __builtin_sinf(float)
    RETCODE * dbsechandle(DBINT, INTFUNCPTR)
    long double __builtin_sinl(long double)
    bool __builtin_isfinite()
    double __builtin_sinh(double)
#	long double __builtin_cabsl(complex long double)
    void dbcursorclose(DBCURSOR *)
#	float __builtin_cabsf(complex float)
    BYTE * dbbylist(DBPROCESS *, int, int *)
    RETCODE dbresults_r(DBPROCESS *, int)
    RETCODE dbdatecmp(DBPROCESS *, DBDATETIME *, DBDATETIME *)
    void dbrecftos(char *)
    DBBOOL dbisavail(DBPROCESS *)
    cdef enum:
        CI_REGULAR = 1
    cdef enum:
        CI_ALTERNATE = 2
    cdef enum:
        CI_CURSOR = 3
    cdef enum CI_TYPE:
        CI_REGULAR = 1
        CI_ALTERNATE = 2
        CI_CURSOR = 3
    RETCODE dbcolinfo(DBPROCESS *, int, DBINT, DBINT, DBCOL *)
    int dbdatename(DBPROCESS *, char *, int, DBDATETIME *)
    int __builtin_ctz(int)
    int dbmnycmp(DBPROCESS *, DBMONEY *, DBMONEY *)
    RETCODE dbsetlname(LOGINREC *, char *, int)
    DBINT dblastrow(DBPROCESS *)
    RETCODE dbmorecmds(DBPROCESS *)
    long double __builtin_asinl(long double)
    RETCODE bcp_moretext(DBPROCESS *, DBINT, BYTE *)
    char * dbservcharset(DBPROCESS *)
    RETCODE dbsetlbool(LOGINREC *, int, int)
    RETCODE dbaltbind_ps(DBPROCESS *, int, int, int, DBINT, BYTE *, DBTYPEINFO *)
    RETCODE dbprrow(DBPROCESS *)
    char * dbchange(DBPROCESS *)
    long double __builtin_sqrtl(long double)
    double __builtin_nans(char *)
    int dbgetoff(DBPROCESS *, DBUSMALLINT, int)
    float __builtin_sqrtf(float)
    RETCODE dbmnymaxneg(DBPROCESS *, DBMONEY *)
    int dbbufsize(DBPROCESS *)
    DBINT dbfirstrow(DBPROCESS *)
    RETCODE dbsetloginfo(LOGINREC *, DBLOGINFO *)
    RETCODE dbmny4copy(DBPROCESS *, DBMONEY4 *, DBMONEY4 *)
    char * dbversion()
    DBINT dbcollen(DBPROCESS *, int)
    RETCODE dbtablecolinfo(DBPROCESS *, DBINT, DBCOL *)
    RETCODE dbrpwset(LOGINREC *, char *, char *, int)
    float __builtin_frexpf(float, int *)
    long double __builtin_frexpl(long double, int *)
    RETCODE dbfcmd(DBPROCESS *, char *)
    RETCODE dbsprline(DBPROCESS *, char *, DBINT, DBCHAR)
    bool __builtin_va_arg_pack()
    int dbstrcmp(DBPROCESS *, char *, int, char *, int, DBSORTORDER *)
    int dbaltop(DBPROCESS *, int, int)
    RETCODE dbsetdefcharset(char *)
#	complex long double __builtin_ccoshl(complex long double)
#	complex float __builtin_ccoshf(complex float)
    int dbstrlen(DBPROCESS *)
    int dbdate4cmp(DBPROCESS *, DBDATETIME4 *, DBDATETIME4 *)
    RETCODE dbregwatch(DBPROCESS *, DBCHAR *, DBSMALLINT, DBUSMALLINT)
    RETCODE bcp_columns(DBPROCESS *, int)
    double __builtin_ceil(double)
    float __builtin_fmodf(float, float)
    long double __builtin_fmodl(long double, long double)
    int EXCOMM = 9

ctypedef int LINE_T
